@@ -14,13 +14,6 @@ struct alarm_list {
 	void			(*function)(struct alarm_list *a, void *data);
 };
 
-static inline void
-set_alarm_expiration(struct alarm_list *t, long tv_sec, long tv_usec)
-{
-	t->tv.tv_sec = tv_sec;
-	t->tv.tv_usec = tv_usec;
-}
-
 int init_alarm_hash(void);
 
 void destroy_alarm_hash(void);
@@ -29,11 +22,9 @@ void init_alarm(struct alarm_list *t,
 		void *data,
 		void (*fcn)(struct alarm_list *a, void *data));
 
-void add_alarm(struct alarm_list *alarm);
+void add_alarm(struct alarm_list *alarm, unsigned long sc, unsigned long usc);
 
 void del_alarm(struct alarm_list *alarm);
-
-void mod_alarm(struct alarm_list *alarm, unsigned long sc, unsigned long usc);
 
 int get_next_alarm_run(struct timeval *next_alarm);
 
