@@ -37,14 +37,13 @@ static void timer_add(struct us_conntrack *u, void *data)
 	struct alarm_list *alarm = data;
 
 	init_alarm(alarm, u, timeout);
-	set_alarm_expiration(alarm, CONFIG(cache_timeout), 0);
-	add_alarm(alarm);
+	add_alarm(alarm, CONFIG(cache_timeout), 0);
 }
 
 static void timer_update(struct us_conntrack *u, void *data)
 {
 	struct alarm_list *alarm = data;
-	mod_alarm(alarm, CONFIG(cache_timeout), 0);
+	add_alarm(alarm, CONFIG(cache_timeout), 0);
 }
 
 static void timer_destroy(struct us_conntrack *u, void *data)
