@@ -90,8 +90,7 @@ static void do_alive_alarm(struct alarm_list *a, void *data)
 	tx_queue_add_ctlmsg(NET_F_ALIVE, 0, 0);
 
 	init_alarm(&alive_alarm, NULL, do_alive_alarm);
-	set_alarm_expiration(&alive_alarm, 1, 0);
-	add_alarm(&alive_alarm);
+	add_alarm(&alive_alarm, 1, 0);
 }
 
 static int ftfw_init(void)
@@ -113,8 +112,7 @@ static int ftfw_init(void)
 
 	/* XXX: alive message expiration configurable */
 	init_alarm(&alive_alarm, NULL, do_alive_alarm);
-	set_alarm_expiration(&alive_alarm, 1, 0);
-	add_alarm(&alive_alarm);
+	add_alarm(&alive_alarm, 1, 0);
 
 	return 0;
 }
